--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<h2 style="text-align:center"> Profile Card</h2>
+<h2 style="text-align:center">Hari's Profile Card</h2>
 
 <div class="card">
   <img src="./img/hari.jpg" alt="John" style="width:100%">
